@@ -1,5 +1,5 @@
 <Type Name="Timeout" FullName="Gtk.Timeout">
-  <TypeSignature Language="C#" Value="public class Timeout" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class Timeout" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyPublicKey />
@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Registers a method to be called periodically.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -25,15 +25,15 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Parameters>
-		<Parameter Name="interval" Type="System.UInt32" />
-		<Parameter Name="function" Type="Gtk.Function" />
-	</Parameters>
+        <Parameter Name="interval" Type="System.UInt32" />
+        <Parameter Name="function" Type="Gtk.Function" />
+      </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Registers a <paramref name="function" /> to be called periodically.</summary>
         <param name="interval">a <see cref="T:System.UInt32" /></param>
         <param name="function">a <see cref="T:Gtk.Function" /></param>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>The <paramref name="function" /> will be called repeatedly after <paramref name="interval" /> milliseconds until it returns <see langword="false" /> at which point the <see cref="T:Gtk.Timeout" /> is destroyed and will not be called again.</remarks>
       </Docs>
     </Member>
     <Member MemberName="AddFull">
@@ -43,21 +43,21 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Parameters>
-		<Parameter Name="interval" Type="System.UInt32" />
-		<Parameter Name="function" Type="Gtk.Function" />
-		<Parameter Name="marshal" Type="Gtk.CallbackMarshal" />
-		<Parameter Name="data" Type="System.IntPtr" />
-		<Parameter Name="destroy" Type="Gtk.DestroyNotify" />
-	</Parameters>
+        <Parameter Name="interval" Type="System.UInt32" />
+        <Parameter Name="function" Type="Gtk.Function" />
+        <Parameter Name="marshal" Type="Gtk.CallbackMarshal" />
+        <Parameter Name="data" Type="System.IntPtr" />
+        <Parameter Name="destroy" Type="Gtk.DestroyNotify" />
+      </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Registers a <paramref name="function" /> to be called periodically.</summary>
         <param name="interval">a <see cref="T:System.UInt32" /></param>
         <param name="function">a <see cref="T:Gtk.Function" /></param>
         <param name="marshal">a <see cref="T:Gtk.CallbackMarshal" /></param>
         <param name="data">a <see cref="T:System.IntPtr" /></param>
         <param name="destroy">a <see cref="T:Gtk.DestroyNotify" /></param>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>The <paramref name="function" /> will be called repeatedly after <paramref name="interval" /> milliseconds until it returns <see langword="false" /> at which point the <see cref="T:Gtk.Timeout" /> is destroyed and will not be called again.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Remove">
@@ -67,12 +67,12 @@
         <ReturnType>System.Void</ReturnType>
       </ReturnValue>
       <Parameters>
-		<Parameter Name="timeout_handler_id" Type="System.UInt32" />
-	</Parameters>
+        <Parameter Name="timeout_handler_id" Type="System.UInt32" />
+      </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Removes the given timeout destroying all information about it.</summary>
         <param name="timeout_handler_id">a <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -81,9 +81,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Internal Constructor</summary>
         <returns>a <see cref="T:Gtk.Timeout" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>This should not be called directly by typical applications.</remarks>
       </Docs>
     </Member>
   </Members>
