@@ -1,6 +1,7 @@
 2003-08-25  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/Layout.xml: mostly documented
+	* en/Gtk/Timeout.xml: documented
 
 2003-08-18  John Luke  <jluke@cfl.rr.com>
 
